[gd_scene load_steps=5 format=2]

[ext_resource path="res://boss/res/lasershooterv2.png" type="Texture" id=1]
[ext_resource path="res://boss/script/radial laser v2.gd" type="Script" id=2]
[ext_resource path="res://boss/res/laserv2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="radial laser v2" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="laser2" type="Area2D" parent="."]

[node name="laser" type="Sprite" parent="laser2"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser2"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="laser2"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10000 )

[node name="laser_shooter" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="reset" type="Timer" parent="."]

[connection signal="body_entered" from="laser2" to="." method="_on_laser2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="reset" to="." method="_on_reset_timeout"]
